@@ -2,7 +2,7 @@ Package: kit
 Type: Package
 Title: Data Manipulation Functions Implemented in C
 Version: 0.0.17
-Date: 2024-04-25
+Date: 2024-05-03
 Authors@R: c(person("Morgan", "Jacob", role = c("aut", "cre", "cph"), email = "morgan.emailbox@gmail.com"), 
              person("Sebastian", "Krantz", role = "ctb"))
 Author: Morgan Jacob [aut, cre, cph], Sebastian Krantz [ctb]
