@@ -452,7 +452,7 @@ SEXP cpsortR (SEXP x, SEXP decreasing, SEXP nthread, SEXP nalast, SEXP env, SEXP
         }
       }
       if (ct > 0) {
-        SETLENGTH(valSorted, nlen-ct);
+        valSorted = Rf_xlengthgets(valSorted, nlen-ct);
       }
     }
     UNPROTECT(2);
@@ -513,7 +513,7 @@ SEXP cpsortR (SEXP x, SEXP decreasing, SEXP nthread, SEXP nalast, SEXP env, SEXP
         }
       }
       if (ct > 0) {
-        SETLENGTH(ans, xlen-ct);
+        ans = Rf_xlengthgets(ans, xlen-ct);
       }
     }
   } else {*/
@@ -531,7 +531,10 @@ SEXP cpsortR (SEXP x, SEXP decreasing, SEXP nthread, SEXP nalast, SEXP env, SEXP
         }
       }
       if (ct > 0) {
-        SETLENGTH(ans, xlen-ct);
+        ans = Rf_xlengthgets(ans, xlen-ct);
+        if (!cindex) {
+          copyMostAttrib(x, ans);
+        }
       }
     }
   //}
@@ -610,7 +613,7 @@ SEXP charToFactR (SEXP x, SEXP decreasing, SEXP nthread, SEXP nalast, SEXP env, 
   
   free(lookupTable);
   if (addNAv == 0) {
-    SETLENGTH(valSorted, LENGTH(valSorted)-1);
+    valSorted = Rf_xlengthgets(valSorted, LENGTH(valSorted)-1);
   }
   setAttrib(ans, R_LevelsSymbol, valSorted);
   SEXP classV = PROTECT(allocVector(STRSXP,1));
